# aarch64-cpu

./: CHANGELOG.md  Cargo.toml  FVP_BaseR_AEMv8R.cfg  FVP_BaseR_AEMv8R_smp.cfg  README.md  justfile
.cargo/: config.toml
.github/workflows/: build.yml  release-plz.yml
examples/armv8-r/: .gitignore  Cargo.toml  README.md  build.rs  fvp_cfg.txt  memory.ld  memory.x  rust-toolchain.toml
examples/armv8-r/.cargo/: config.toml
examples/armv8-r/src/: fmt.rs  gic.rs  lib.rs  timer.rs  uart.rs
src/: asm.rs  cache.rs  critical_section.rs  exception.rs  gic.rs  interrupt.rs  irq.rs  lib.rs  mmu.rs  registers.rs
src/asm/: at.rs  barrier.rs  cache.S  cache.rs  random.rs  tlb.rs  tlbi.rs
src/gic/: v2.rs  v3.rs
src/gic/v2/: registers.rs
src/gic/v3/: registers.rs
src/mmu/: address.rs  descriptor.rs  entry.rs
src/registers/: accdata_el1.rs  actlrmask_el1.rs  actlrmask_el2.rs  afsr0_el1.rs  afsr0_el2.rs  afsr0_el3.rs  afsr1_el1.rs  aidr_el1.rs  apdakeylo_el1.rs  apdbkeylo_el1.rs  apgakeylo_el1.rs  apiakeylo_el1.rs  ccsidr2_el1.rs  cnthp_ctl_el2.rs  cnthp_cval_el2.rs  cnthp_tval_el2.rs  cntkctl_el1.rs  cntpoff_el2.rs  contextidr_el1.rs  cpacr_el1.rs  cptr_el2.rs  csselr_el1.rs  dbgdtr_el0.rs  dbgdtrrx_el0.rs  dbgdtrtx_el0.rs  esr_el1.rs  esr_el2.rs  hacr_el2.rs  hafgrtr_el2.rs  hcr_el2.rs  hdfgrtr_el2.rs  hdfgwtr_el2.rs  hfgitr_el2.rs  hfgrtr_el2.rs  hfgwtr_el2.rs  hpfar_el2.rs  icc_ap0r_el1.rs  icc_ap1r_el1.rs  icc_asgi1r_el1.rs  icc_bpr0_el1.rs  (+103 more)
testing/: Cargo.toml  README.md
testing/src/: lib.rs
